--- a/public/Green/index.html
+++ b/public/Green/index.html
@@ -545,8 +545,8 @@
 
                         <div class="col-lg-3 col-md-6 content-item">
                           <div class="bg-primary col-12 py-2 ps-3 text-light ">Instagram</div>
+                            <a href=""><img src="assets/img/team/instagram.png" class="mt-2" alt="" width="100%" height="400px"></a>
                             
-                            <img src="assets/img/team/instagram.png" class="mt-2" alt="" width="100%" height="400px">
                         </div>
                     </div>
                 </div>
