--- a/public/Green/index.html
+++ b/public/Green/index.html
@@ -97,24 +97,24 @@
                             >
                         </li>
                         <li>
-                            <a class="nav-link scrollto" href="#about">About</a>
+                            <a class="nav-link scrollto" href="#about">Keilmuan Geografi</a>
                         </li>
                         <li>
                             <a class="nav-link scrollto" href="#services"
-                                >Services</a
+                                >PTN/PTS Geografi</a
                             >
                         </li>
                         <li>
                             <a class="nav-link scrollto" href="#portfolio"
-                                >Portfolio</a
+                                >Informasi Keprofesian</a
                             >
                         </li>
                         <li>
-                            <a class="nav-link scrollto" href="#team">Team</a>
+                            <a class="nav-link scrollto" href="#team">kegiatan IGI</a>
                         </li>
                         <li>
                             <a class="nav-link scrollto" href="#contact"
-                                >Contact</a
+                                >Keanggotaan </a
                             >
                         </li>
                         <li>
